--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=4000
 
-MONGO_URI=mongodb+srv://nipuni:mern1234@cluster0.d02wtxj.mongodb.net/?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://[username:password@]host[/[defaultauthdb][?options]]
